--- a/upload_pic/templates/base.html
+++ b/upload_pic/templates/base.html
@@ -1,4 +1,5 @@
-{% load staticfiles %}
+{% load static %}
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -26,13 +27,13 @@ Content Text
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="{% static 'first.jpg' %}" alt="1st">
+            <img src="{% static 'pics/first.jpg' %}" alt="1st">
         </div>
         <div class="carousel-item">
-            <img src="{% static 'second.jpg' %}" alt="2nd">
+            <img src="{% static 'pics/second.jpg' %}" alt="2nd">
         </div>
         <div class="carousel-item">
-            <img src="{% static 'third.png' %}" alt="3rd">
+            <img src="{% static 'pics/third.png' %}" alt="3rd">
         </div>
     </div>
 </div>
